--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,7 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
-
-body {
-  min-height: 100vh;
+body{
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -25,8 +23,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  min-height: 100dvh;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
